# randoom

./: .gitignore  main.py  pyproject.toml
data/: city.json  dungeon.json  factions.json  inn.json  npcs.json  wild.json
notebooks/: stats.ipynb
src/: create_npc.py  dungeon.py  the_wild.py
src/shadowdark_character/: character_stats.py  sd_character.py
src/utils/: load_data.py
tests/: test_main.py
